// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditCourseForm renders html correctly while submitting 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReduxForm
    courseOptions={
      Object {
        "data": Object {
          "actions": Object {
            "PUT": Object {
              "level_type": Object {
                "choices": Array [
                  Object {
                    "display_name": "Beginner",
                    "value": "beginner",
                  },
                  Object {
                    "display_name": "Intermediate",
                    "value": "intermediate",
                  },
                  Object {
                    "display_name": "Advanced",
                    "value": "advanced",
                  },
                ],
              },
              "subjects": Object {
                "child": Object {
                  "choices": Array [
                    Object {
                      "display_name": "Business",
                      "value": "business",
                    },
                    Object {
                      "display_name": "Chemistry",
                      "value": "chemistry",
                    },
                    Object {
                      "display_name": "English",
                      "value": "english",
                    },
                    Object {
                      "display_name": "Security",
                      "value": "security",
                    },
                  ],
                },
              },
            },
          },
        },
      }
    }
    entitlement={true}
    handleSubmit={[Function]}
    initialValues={
      Object {
        "additional_information": "additional info",
        "faq": "frequently asked questions",
        "full_description": "long desc",
        "imageSrc": "http://image.src.small",
        "learner_testimonials": "learner testimonials",
        "level_type": "advanced",
        "mode": "verified",
        "outcome": "learning outcomes",
        "prerequisites_raw": "prereq",
        "price": "77",
        "short_description": "short desc",
        "subjectPrimary": "business",
        "subjectSecondary": "english",
        "subjectTertiary": "security",
        "syllabus_raw": "syllabus",
        "title": "Test Title",
        "videoSrc": "https://www.video.src/watch?v=fdsafd",
      }
    }
    number="Test103x"
    submitting={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "courseOptions": Object {
        "data": Object {
          "actions": Object {
            "PUT": Object {
              "level_type": Object {
                "choices": Array [
                  Object {
                    "display_name": "Beginner",
                    "value": "beginner",
                  },
                  Object {
                    "display_name": "Intermediate",
                    "value": "intermediate",
                  },
                  Object {
                    "display_name": "Advanced",
                    "value": "advanced",
                  },
                ],
              },
              "subjects": Object {
                "child": Object {
                  "choices": Array [
                    Object {
                      "display_name": "Business",
                      "value": "business",
                    },
                    Object {
                      "display_name": "Chemistry",
                      "value": "chemistry",
                    },
                    Object {
                      "display_name": "English",
                      "value": "english",
                    },
                    Object {
                      "display_name": "Security",
                      "value": "security",
                    },
                  ],
                },
              },
            },
          },
        },
      },
      "destroyOnUnmount": true,
      "enableReinitialize": false,
      "entitlement": true,
      "forceUnregisterOnUnmount": false,
      "form": "edit-course-form",
      "getFormState": [Function],
      "handleSubmit": [Function],
      "initialValues": Object {
        "additional_information": "additional info",
        "faq": "frequently asked questions",
        "full_description": "long desc",
        "imageSrc": "http://image.src.small",
        "learner_testimonials": "learner testimonials",
        "level_type": "advanced",
        "mode": "verified",
        "outcome": "learning outcomes",
        "prerequisites_raw": "prereq",
        "price": "77",
        "short_description": "short desc",
        "subjectPrimary": "business",
        "subjectSecondary": "english",
        "subjectTertiary": "security",
        "syllabus_raw": "syllabus",
        "title": "Test Title",
        "videoSrc": "https://www.video.src/watch?v=fdsafd",
      },
      "keepDirtyOnReinitialize": false,
      "number": "Test103x",
      "persistentSubmitErrors": false,
      "pure": true,
      "shouldAsyncValidate": [Function],
      "shouldError": [Function],
      "shouldValidate": [Function],
      "shouldWarn": [Function],
      "submitting": true,
      "touchOnBlur": true,
      "touchOnChange": false,
      "updateUnregisteredFields": false,
    },
    "ref": [Function],
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "courseOptions": Object {
          "data": Object {
            "actions": Object {
              "PUT": Object {
                "level_type": Object {
                  "choices": Array [
                    Object {
                      "display_name": "Beginner",
                      "value": "beginner",
                    },
                    Object {
                      "display_name": "Intermediate",
                      "value": "intermediate",
                    },
                    Object {
                      "display_name": "Advanced",
                      "value": "advanced",
                    },
                  ],
                },
                "subjects": Object {
                  "child": Object {
                    "choices": Array [
                      Object {
                        "display_name": "Business",
                        "value": "business",
                      },
                      Object {
                        "display_name": "Chemistry",
                        "value": "chemistry",
                      },
                      Object {
                        "display_name": "English",
                        "value": "english",
                      },
                      Object {
                        "display_name": "Security",
                        "value": "security",
                      },
                    ],
                  },
                },
              },
            },
          },
        },
        "destroyOnUnmount": true,
        "enableReinitialize": false,
        "entitlement": true,
        "forceUnregisterOnUnmount": false,
        "form": "edit-course-form",
        "getFormState": [Function],
        "handleSubmit": [Function],
        "initialValues": Object {
          "additional_information": "additional info",
          "faq": "frequently asked questions",
          "full_description": "long desc",
          "imageSrc": "http://image.src.small",
          "learner_testimonials": "learner testimonials",
          "level_type": "advanced",
          "mode": "verified",
          "outcome": "learning outcomes",
          "prerequisites_raw": "prereq",
          "price": "77",
          "short_description": "short desc",
          "subjectPrimary": "business",
          "subjectSecondary": "english",
          "subjectTertiary": "security",
          "syllabus_raw": "syllabus",
          "title": "Test Title",
          "videoSrc": "https://www.video.src/watch?v=fdsafd",
        },
        "keepDirtyOnReinitialize": false,
        "number": "Test103x",
        "persistentSubmitErrors": false,
        "pure": true,
        "shouldAsyncValidate": [Function],
        "shouldError": [Function],
        "shouldValidate": [Function],
        "shouldWarn": [Function],
        "submitting": true,
        "touchOnBlur": true,
        "touchOnChange": false,
        "updateUnregisteredFields": false,
      },
      "ref": [Function],
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`EditCourseForm renders html correctly with all data present and verified entitlement 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReduxForm
    courseOptions={
      Object {
        "data": Object {
          "actions": Object {
            "PUT": Object {
              "level_type": Object {
                "choices": Array [
                  Object {
                    "display_name": "Beginner",
                    "value": "beginner",
                  },
                  Object {
                    "display_name": "Intermediate",
                    "value": "intermediate",
                  },
                  Object {
                    "display_name": "Advanced",
                    "value": "advanced",
                  },
                ],
              },
              "subjects": Object {
                "child": Object {
                  "choices": Array [
                    Object {
                      "display_name": "Business",
                      "value": "business",
                    },
                    Object {
                      "display_name": "Chemistry",
                      "value": "chemistry",
                    },
                    Object {
                      "display_name": "English",
                      "value": "english",
                    },
                    Object {
                      "display_name": "Security",
                      "value": "security",
                    },
                  ],
                },
              },
            },
          },
        },
      }
    }
    entitlement={true}
    handleSubmit={[Function]}
    initialValues={
      Object {
        "additional_information": "additional info",
        "faq": "frequently asked questions",
        "full_description": "long desc",
        "imageSrc": "http://image.src.small",
        "learner_testimonials": "learner testimonials",
        "level_type": "advanced",
        "mode": "verified",
        "outcome": "learning outcomes",
        "prerequisites_raw": "prereq",
        "price": "77",
        "short_description": "short desc",
        "subjectPrimary": "business",
        "subjectSecondary": "english",
        "subjectTertiary": "security",
        "syllabus_raw": "syllabus",
        "title": "Test Title",
        "videoSrc": "https://www.video.src/watch?v=fdsafd",
      }
    }
    number="Test102x"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "courseOptions": Object {
        "data": Object {
          "actions": Object {
            "PUT": Object {
              "level_type": Object {
                "choices": Array [
                  Object {
                    "display_name": "Beginner",
                    "value": "beginner",
                  },
                  Object {
                    "display_name": "Intermediate",
                    "value": "intermediate",
                  },
                  Object {
                    "display_name": "Advanced",
                    "value": "advanced",
                  },
                ],
              },
              "subjects": Object {
                "child": Object {
                  "choices": Array [
                    Object {
                      "display_name": "Business",
                      "value": "business",
                    },
                    Object {
                      "display_name": "Chemistry",
                      "value": "chemistry",
                    },
                    Object {
                      "display_name": "English",
                      "value": "english",
                    },
                    Object {
                      "display_name": "Security",
                      "value": "security",
                    },
                  ],
                },
              },
            },
          },
        },
      },
      "destroyOnUnmount": true,
      "enableReinitialize": false,
      "entitlement": true,
      "forceUnregisterOnUnmount": false,
      "form": "edit-course-form",
      "getFormState": [Function],
      "handleSubmit": [Function],
      "initialValues": Object {
        "additional_information": "additional info",
        "faq": "frequently asked questions",
        "full_description": "long desc",
        "imageSrc": "http://image.src.small",
        "learner_testimonials": "learner testimonials",
        "level_type": "advanced",
        "mode": "verified",
        "outcome": "learning outcomes",
        "prerequisites_raw": "prereq",
        "price": "77",
        "short_description": "short desc",
        "subjectPrimary": "business",
        "subjectSecondary": "english",
        "subjectTertiary": "security",
        "syllabus_raw": "syllabus",
        "title": "Test Title",
        "videoSrc": "https://www.video.src/watch?v=fdsafd",
      },
      "keepDirtyOnReinitialize": false,
      "number": "Test102x",
      "persistentSubmitErrors": false,
      "pure": true,
      "shouldAsyncValidate": [Function],
      "shouldError": [Function],
      "shouldValidate": [Function],
      "shouldWarn": [Function],
      "touchOnBlur": true,
      "touchOnChange": false,
      "updateUnregisteredFields": false,
    },
    "ref": [Function],
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "courseOptions": Object {
          "data": Object {
            "actions": Object {
              "PUT": Object {
                "level_type": Object {
                  "choices": Array [
                    Object {
                      "display_name": "Beginner",
                      "value": "beginner",
                    },
                    Object {
                      "display_name": "Intermediate",
                      "value": "intermediate",
                    },
                    Object {
                      "display_name": "Advanced",
                      "value": "advanced",
                    },
                  ],
                },
                "subjects": Object {
                  "child": Object {
                    "choices": Array [
                      Object {
                        "display_name": "Business",
                        "value": "business",
                      },
                      Object {
                        "display_name": "Chemistry",
                        "value": "chemistry",
                      },
                      Object {
                        "display_name": "English",
                        "value": "english",
                      },
                      Object {
                        "display_name": "Security",
                        "value": "security",
                      },
                    ],
                  },
                },
              },
            },
          },
        },
        "destroyOnUnmount": true,
        "enableReinitialize": false,
        "entitlement": true,
        "forceUnregisterOnUnmount": false,
        "form": "edit-course-form",
        "getFormState": [Function],
        "handleSubmit": [Function],
        "initialValues": Object {
          "additional_information": "additional info",
          "faq": "frequently asked questions",
          "full_description": "long desc",
          "imageSrc": "http://image.src.small",
          "learner_testimonials": "learner testimonials",
          "level_type": "advanced",
          "mode": "verified",
          "outcome": "learning outcomes",
          "prerequisites_raw": "prereq",
          "price": "77",
          "short_description": "short desc",
          "subjectPrimary": "business",
          "subjectSecondary": "english",
          "subjectTertiary": "security",
          "syllabus_raw": "syllabus",
          "title": "Test Title",
          "videoSrc": "https://www.video.src/watch?v=fdsafd",
        },
        "keepDirtyOnReinitialize": false,
        "number": "Test102x",
        "persistentSubmitErrors": false,
        "pure": true,
        "shouldAsyncValidate": [Function],
        "shouldError": [Function],
        "shouldValidate": [Function],
        "shouldWarn": [Function],
        "touchOnBlur": true,
        "touchOnChange": false,
        "updateUnregisteredFields": false,
      },
      "ref": [Function],
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`EditCourseForm renders html correctly with minimal data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReduxForm
    courseOptions={
      Object {
        "data": Object {
          "actions": Object {
            "PUT": Object {
              "level_type": Object {
                "choices": Array [
                  Object {
                    "display_name": "Beginner",
                    "value": "beginner",
                  },
                  Object {
                    "display_name": "Intermediate",
                    "value": "intermediate",
                  },
                  Object {
                    "display_name": "Advanced",
                    "value": "advanced",
                  },
                ],
              },
              "subjects": Object {
                "child": Object {
                  "choices": Array [
                    Object {
                      "display_name": "Business",
                      "value": "business",
                    },
                    Object {
                      "display_name": "Chemistry",
                      "value": "chemistry",
                    },
                    Object {
                      "display_name": "English",
                      "value": "english",
                    },
                    Object {
                      "display_name": "Security",
                      "value": "security",
                    },
                  ],
                },
              },
            },
          },
        },
      }
    }
    handleSubmit={[Function]}
    initialValues={
      Object {
        "title": "Test Title",
      }
    }
    number="Test101x"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "courseOptions": Object {
        "data": Object {
          "actions": Object {
            "PUT": Object {
              "level_type": Object {
                "choices": Array [
                  Object {
                    "display_name": "Beginner",
                    "value": "beginner",
                  },
                  Object {
                    "display_name": "Intermediate",
                    "value": "intermediate",
                  },
                  Object {
                    "display_name": "Advanced",
                    "value": "advanced",
                  },
                ],
              },
              "subjects": Object {
                "child": Object {
                  "choices": Array [
                    Object {
                      "display_name": "Business",
                      "value": "business",
                    },
                    Object {
                      "display_name": "Chemistry",
                      "value": "chemistry",
                    },
                    Object {
                      "display_name": "English",
                      "value": "english",
                    },
                    Object {
                      "display_name": "Security",
                      "value": "security",
                    },
                  ],
                },
              },
            },
          },
        },
      },
      "destroyOnUnmount": true,
      "enableReinitialize": false,
      "forceUnregisterOnUnmount": false,
      "form": "edit-course-form",
      "getFormState": [Function],
      "handleSubmit": [Function],
      "initialValues": Object {
        "title": "Test Title",
      },
      "keepDirtyOnReinitialize": false,
      "number": "Test101x",
      "persistentSubmitErrors": false,
      "pure": true,
      "shouldAsyncValidate": [Function],
      "shouldError": [Function],
      "shouldValidate": [Function],
      "shouldWarn": [Function],
      "touchOnBlur": true,
      "touchOnChange": false,
      "updateUnregisteredFields": false,
    },
    "ref": [Function],
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "courseOptions": Object {
          "data": Object {
            "actions": Object {
              "PUT": Object {
                "level_type": Object {
                  "choices": Array [
                    Object {
                      "display_name": "Beginner",
                      "value": "beginner",
                    },
                    Object {
                      "display_name": "Intermediate",
                      "value": "intermediate",
                    },
                    Object {
                      "display_name": "Advanced",
                      "value": "advanced",
                    },
                  ],
                },
                "subjects": Object {
                  "child": Object {
                    "choices": Array [
                      Object {
                        "display_name": "Business",
                        "value": "business",
                      },
                      Object {
                        "display_name": "Chemistry",
                        "value": "chemistry",
                      },
                      Object {
                        "display_name": "English",
                        "value": "english",
                      },
                      Object {
                        "display_name": "Security",
                        "value": "security",
                      },
                    ],
                  },
                },
              },
            },
          },
        },
        "destroyOnUnmount": true,
        "enableReinitialize": false,
        "forceUnregisterOnUnmount": false,
        "form": "edit-course-form",
        "getFormState": [Function],
        "handleSubmit": [Function],
        "initialValues": Object {
          "title": "Test Title",
        },
        "keepDirtyOnReinitialize": false,
        "number": "Test101x",
        "persistentSubmitErrors": false,
        "pure": true,
        "shouldAsyncValidate": [Function],
        "shouldError": [Function],
        "shouldValidate": [Function],
        "shouldWarn": [Function],
        "touchOnBlur": true,
        "touchOnChange": false,
        "updateUnregisteredFields": false,
      },
      "ref": [Function],
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
